--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio Kayla Goldner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     
 </head>
 <body>
@@ -32,7 +32,7 @@
 
             <h2>About Me</h2>
 
-            <img class="image-responsive" src="./assets/kayla.jpeg">
+            <img class="image-responsive" src="/assets/images/kayla.jpeg">
 
                 <p>Hello everyone! My name is Kayla Goldner, and I am currently a UCSD
                 Extension Coding Bootcamp student. My aspiration is to become a full stack Web
