--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <h2>About Me</h2>
 
-            <img class="image-responsive" src="/assets/images/kayla.jpeg">
+            <img class="image-responsive" src="./assets/images/kayla.jpeg">
 
                 <p>Hello everyone! My name is Kayla Goldner, and I am currently a UCSD
                 Extension Coding Bootcamp student. My aspiration is to become a full stack Web
