--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="display-left">
-                <img class="left" src="./assets/images/CubeTv.jpg" alt="Rock Paper Scissors">
+                <img class="left" src="./assets/images/CubeTV.jpg" alt="Rock Paper Scissors">
                 <div class="image-title"> Rock Paper Scissors </div>
             </div>
 
